Put in Csabas comments in results.tex, umbrella, fakFree and force-analysis.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -11,15 +11,4 @@ We compared these results to conformations obtained in FAK molecules bound to a 
 In \autoref{multiProt} we investigated the interactions between multiple FAK molecules on a membrane. We were able to confirm the importance of \acid{W}{266} in FERM-FERM dimerization proposed by \textcite{fakdimers}. However, our observations imply that FERM-kinase dimers form more often than FERM-FERM dimers.\\
 Regarding more than two FAK molecules, we observed a tendency to aggregate in chain-like structures. These structures were investigated on activation-promoting features, like increased domain distances or a smaller contact area, but no significant differences have been observed.\\
 \\
-Because FERM-kinase dimers were observed the most, a further investigation on this interaction, including the identification of key residues and preferred binding poses, might contribute to the understanding of FAK clustering processes. In addition, the impact of the \pip{} concentration on FAK clustering should be addressed, since \pip{} concentration is linked to integrin signalling.
-
-
-
-
-
-A further investigation of FAK dimers, especially FERM-kinase dimers, might 
-Further studies
-
-% TODO: changing pip2 concentration, alternatives to force, dimer interface in more detail
-% TODO: classify instead of cluster, key residues, preferred poses.
-Currently we try to cluster the obtained configurations with more general approaches in order to reveal the parameters inducing configurational changes in multiple FAK interactions. However, arrangement of large molecules such as FAK is a time consuming process, which has not come to an end in our simulations. Longer simulation times could therefore give new insights into the consequences of FAK clustering. 
+Several aspects of FAK clustering are still elusive and have to be clarified in further studies. First, FERM-kinase dimers are of special interest since they were observed the most. Therefore, the identification of key residues and preferred binding poses might contribute to the understanding of FAK clustering processes. Moreover, the impact of the \pip{} concentration in the membrane on the clustering process has to be investigated. Also the analysis of the scaffolding function of FAK clusters as well as their impact on the membrane is required to develop an exhaustive model of the role of FAK.
