--- a/results/membrane.tex
+++ b/results/membrane.tex
@@ -1,3 +1,4 @@
+\label{membrane:chapter}
 In this section, the conformation of FAK bound to a \pip{}-containing membrane (FAK-MEM) is compared to the observations of FAK-SOL. To this end, FAK structures of setup 4 were used with the condition that the FAK molecules have no neighbours. The contact map is based on the same dataset which was used for \autoref{force:contactmap}.\\
 \\
 % TODO: link figure for FAK-SOL, CA increase: in percentage
