--- a/results.tex
+++ b/results.tex
@@ -1,15 +1,16 @@
 \chapter{Results}
-In this chapter, we present our results from the simulations. First of all FAK in solution is considered. Afterwards the focus is on the effect of \pip{}. We will start this section with the free energy profile of the basic patch. Since the simulations containing a membrane were carried out with a stabilizing force, we will examine the impact of the force on the observables, before we investigate the conformational changes of FAK induced by binding to the membrane. At the end the results obtained for multiple FAK molecules are presented.
-% TODO: linking to the sections.
-%
-%
-\section{FAK in solution}
-\input{results/freeFAK}
-\clearpage
+In the first part of the project we investigated the cause of the falling of FAK. Therefore, we want to begin the presentation of our results in \autoref{results:umbrella} with the main finding of these studies, namely that the falling is not due to an underestimation of the binding energy in \martini{}.\\
+Afterwards, we analyse the observations of FAK in solution to develop a reference state for later comparisons (\autoref{sec:fak_sol}). Before we consider FAK molecules on membranes, the applied stabilising force and its impact on used observables is examined in \autoref{forceana}.\\
+The investigation of FAK molecules on the membrane is split up into two parts. In \autoref{membrane:chapter}, the obtained conformational changes of FAK molecules bound to a \pip{}-containing membrane are presented. In the last section of this chapter, \autoref{multiProt}, the focus is then on interactions between multiple FAK molecules.
 %
 %
 \section{Free energy profile of basic patch}
 \input{results/umbrella}
+\clearpage
+%
+%
+\section{FAK in solution}
+\input{results/freeFAK}
 \clearpage
 %
 %
