First final draft.

--- a/document.tex
+++ b/document.tex
@@ -43,11 +43,11 @@ oneside, % oneside / twoside
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-\includeonly{conclusion}
+%\includeonly{results}
 
 \begin{document}
 % abstract english
-\include{abstract}
+%\include{abstract}
 %	
 %	
 % chapter introduction
