--- a/results/forceAnalysis.tex
+++ b/results/forceAnalysis.tex
@@ -1,7 +1,7 @@
 \label{forceana}
 In setup 3 and setup 4, we stabilised each protein with an external force acting on the FERM domain (see \autoref{motivation}). To ensure that this restraining does not cause major artefacts, the force-dependency of the used observables is examined below.\\
 \\
-The force has a mean value of $2.44\,\forceunit$ and a standard deviation of $21.80\,\forceunit$. Interestingly, the positive mean value shows that the proteins are rater pushed slightly downwards than pulled up. This indicates that the stabilising force does not have to hold the protein upright the whole time. % TODO: clarify?
+The force has a mean value of $2.44\,\forceunit$ and a standard deviation of $21.80\,\forceunit$. Interestingly, the positive mean value shows that the proteins are rather pushed downwards than pulled up. This indicates that the stabilising force does not have to hold the protein upright the whole time. % TODO: clarify?
 \\
 Linear regressions show that all of the quantities $d_F$, $d_\text{F1-N}$, $d_\text{F2-C}$ and CA have a negligible correlation to the applied force. Here, negligible means that either the regression result was not significant or that the obtained slope was so small, that a change of one standard deviation in force would not change the quantity noticeably.\\
 \\
