--- a/results/freeFAK.tex
+++ b/results/freeFAK.tex
@@ -1,5 +1,4 @@
 \label{sec:fak_sol}
-% TODO: plot 5.1 colorbar frequency, cartoon of spots
 In this section, we analyse the conformation of soluted FAK (FAK-SOL) in order to retrieve a reference state for later comparisons. Since the secondary structure of the two domains is fixed due to the elastic network, the focus is on the FERM-kinase interface.\\
 \\
 The first approach to describe the FERM-kinase interface is to consider the COM distances of F1 to the N-lobe ($d_\text{F1-N}$) and F2 to the C-lobe ($d_\text{F2-C}$).\\
@@ -12,19 +11,19 @@ A second important quantity associated to the FERM-kinase interface is the conta
 %
 \begin{figure}
 	\subcaptionbox{\label{free:f2clf1nl}}[0.49\textwidth]{
-		\includegraphics[height=5.2cm]{figures/results/free_f1f2}
+		\includegraphics[height=5.2cm]{figures/results/free_f1f2_withcartoons}
 	}\hfill%
 	\subcaptionbox{\label{free:ca}}[0.49\textwidth]{
 		\includegraphics[height=5.2cm]{figures/results/free_ca}
 	}%
-	\nicecaption{Domain distances and contact area of FAK-SOL}{(\subref{free:f2clf1nl}): two dimensional hexagonal binning plot of $d_\text{F1-N}$ and $d_\text{F2-C}$ which implies a two state system. (\subref{free:ca}): distribution of CA for the two obtained spots.}
+	\nicecaption{Domain distances and contact area of FAK-SOL}{(\subref{free:f2clf1nl}): two dimensional hexagonal binning plot of $d_\text{F1-N}$ and $d_\text{F2-C}$ which implies a two state system. The tilting of the kinase (red) against the FERM domain (blue) is sketched beside. (\subref{free:ca}): Distribution of the CA value for the two obtained spots. The mean differs ca. $2\%$.}
+	\label{free:pic_ca_and_com}
 \end{figure}
-% TODO: label spots
 %
 %
 %
 \\
-Finally, the contact map showing inter-residue distances of the FERM-kinase interface is considered. Both contact maps, for frames of spot 1 and frames of spot 2, show similar features. Hence, we refer to the contact map of spot 2 in the following. However, since the kinase is tilted against the FERM domain, contacts in area 2 are only observable in frames of spot 2.\\
+Finally, the contact map showing inter-residue distances of the FERM-kinase interface is considered. Both contact maps, for frames of spot 1 and frames of spot 2, show similar features. Hence, we only refer to the contact map of spot 2 in the following. However, contacts in area 2 are only observable in frames of spot 2 because the kinase is tilted against the FERM domain, \\
 The average contact map for frames in spot 2 is shown in \autoref{free:contact}. Two regions can be identified. The first one (area 1) is located between F1 and the N-lobe/activation loop. It shows especially contacts between \acid{Y}{576} and \acid{Y}{577} and residues of the FERM domain. The minimal distance in this area, occurring between residue \acid{H}{41} and \acid{Y}{576}, is $0.45\,\si{\nano\metre}$ with an RMSF value of $0.03\,\si{\nano\metre}$. This area reflects the burying of the activity-regulating residues in the closed state (see \autoref{free:3d_spot2}).\\
 The second region (area 2, obtained in spot 2 only) is located between F2 and the C-lobe. The spots occur around the residues \acid{Y}{180} and \acid{D}{200} of F2 as well as \acid{F}{596} and \acid{R}{665} of the C-lobe. The minimal distance in this area occurs between \acid{Y}{180} and \acid{F}{596} with $0.45\,\si{\nano\metre}$ and an RMSF value of $0.02\,\si{\nano\metre}$. Mutation experiments showed these two residues to have an important effect upon the interface \autocite{structFAK}, which fits to these observations.\\
 The linker shows contacts with both domains. The minimal distances in the marked areas occur between the autophosphorylation site \acid{Y}{397} and \acid{H}{58} of F1 ($0.45\,\si{\nano\metre}$, RMSF $0.03\,\si{\nano\metre}$) as well as \acid{Y}{397} and \acid{Y}{576} of the kinase ($0.50\,\si{\nano\metre}$, RMSF $0.10\,\si{\nano\metre}$). Furthermore, several interactions occur between the residues in the linker itself, namely, between \acid{S}{379} to \acid{V}{389} and \acid{T}{394} to \acid{I}{400} (area 5). Also in this spot, the minimal distance occurs between \acid{Y}{397} and \acid{T}{386} ($0.52\,\si{\nano\metre}$, RMSF $0.04\,\si{\nano\metre}$). The density in this area implies that the linker forms a ball, which is slightly plunged into the interface of the FERM domain and the kinase (regarding area 3 and area 4). This can be seen also in the 3D structure in \autoref{free:3d_spot2}. Our observations support the thesis that autophosphorylation is prevented in the closed conformation by a binding of the linker to the FERM domain \autocite{pap003}.\\
