--- a/document.tex
+++ b/document.tex
@@ -43,7 +43,7 @@ oneside, % oneside / twoside
 \newcommand{\nicecaption}[2]{\caption[#1]{\small{\textbf{#1}\\#2}}}
 
 
-%\includeonly{results}
+%\includeonly{conclusion}
 
 \begin{document}
 % abstract english
@@ -72,4 +72,8 @@ oneside, % oneside / twoside
 %
 % chapter conclusion
 \include{conclusion}
+%
+%
+\printbibliography[title=References]{}
+% bibliography
 \end{document}
