--- a/results/freeFAK.tex
+++ b/results/freeFAK.tex
@@ -16,7 +16,7 @@ A second important quantity associated to the FERM-kinase interface is the conta
 	\subcaptionbox{\label{free:ca}}[0.49\textwidth]{
 		\includegraphics[height=5.2cm]{figures/results/free_ca}
 	}%
-	\nicecaption{Domain distances and contact area of FAK-SOL}{(\subref{free:f2clf1nl}): two dimensional hexagonal binning plot of $d_\text{F1-N}$ and $d_\text{F2-C}$ which implies a two state system. The tilting of the kinase (red) against the FERM domain (blue) is sketched beside. (\subref{free:ca}): Distribution of the CA value for the two obtained spots. The mean differs ca. $2\%$.}
+	\nicecaption{Domain distances and contact area of FAK-SOL}{(\subref{free:f2clf1nl}): two dimensional hexagonal binning plot of $d_\text{F1-N}$ and $d_\text{F2-C}$ which implies a two state system. The tilting of the kinase (red) against the FERM domain (blue) is sketched beside. Here, the star marks the position of the basic patch. (\subref{free:ca}): Distribution of the CA value for the two obtained spots. The mean differs ca. $2\%$.}
 	\label{free:pic_ca_and_com}
 \end{figure}
 %
